--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
-            android:src="/Users/Tom/IntelliJIDEAProjects/CurrentViewApp2/app/src/main/res/drawable/648404-200.png"
+            android:src="drawable/648404-200.png"
             android:layout_marginTop="40dp"
             android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal" android:layout_alignParentStart="false"/>
