--- a/app/src/main/res/layout/activity_login_error.xml
+++ b/app/src/main/res/layout/activity_login_error.xml
@@ -10,4 +10,11 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.LoginError">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Login Error"
+            android:id="@+id/errText" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
+            android:layout_marginTop="224dp" android:textSize="40dp"/>
 </RelativeLayout>
