--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,4 +10,10 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.Dashboard">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Login Complete"
+            android:id="@+id/systemMessage" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
