--- a/app/src/main/res/layout/activity_questionnaire_menu.xml
+++ b/app/src/main/res/layout/activity_questionnaire_menu.xml
@@ -10,4 +10,16 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.QuestionnaireMenu">
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:id="@+id/next"
+            android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:onClick="nextButton"
+            android:id="@+id/back" android:layout_below="@+id/next" android:layout_centerHorizontal="true"/>
 </RelativeLayout>
