--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,14 +16,16 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Login Complete"
             android:id="@+id/systemMessage"
-            android:layout_below="@+id/textView" android:layout_centerHorizontal="true"/>
+            android:layout_below="@+id/textView"
+            android:layout_centerHorizontal="true"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Previous_Questionnaires"
             android:id="@+id/previousQuestionnairesButton"
             android:onClick="btnPrevQuestion"
-            android:layout_marginTop="92dp" android:layout_alignParentEnd="true"
+            android:layout_marginTop="92dp"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentStart="false"/>
     <Button
             android:layout_width="wrap_content"
@@ -31,7 +33,8 @@
             android:text="@string/New_Questionnaire"
             android:id="@+id/NewQuestionnaireButton"
             android:onClick="btnNewQuestion"
-            android:layout_marginTop="92dp" android:layout_alignParentEnd="false"
+            android:layout_marginTop="92dp"
+            android:layout_alignParentEnd="false"
             android:layout_alignParentStart="true"/>
     <Button
             android:layout_width="wrap_content"
@@ -40,19 +43,23 @@
             android:id="@+id/btnHelp"
             android:onClick="btnHelp"
             android:layout_marginTop="75dp"
-            android:layout_below="@+id/NewQuestionnaireButton" android:layout_alignParentStart="true"/>
+            android:layout_below="@+id/NewQuestionnaireButton"
+            android:layout_alignParentStart="true"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:text="@string/Setting"
             android:id="@+id/btnSetting"
             android:onClick="btnSetting"
-            android:layout_alignBottom="@+id/btnHelp" android:layout_alignParentEnd="true"/>
+            android:layout_alignBottom="@+id/btnHelp"
+            android:layout_alignParentEnd="true"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Username:"
-            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
+            android:id="@+id/textView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
