Updated the layout.xml for Q1-10

--- a/app/src/main/res/layout/activity_questionnaire_menu.xml
+++ b/app/src/main/res/layout/activity_questionnaire_menu.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:text="Next"
             android:id="@+id/next"
+            android:onClick="nextButton"
             android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
     <Button
             android:layout_width="wrap_content"
