--- a/app/src/main/res/layout/activity_q1_to_q10.xml
+++ b/app/src/main/res/layout/activity_q1_to_q10.xml
@@ -1,23 +1,240 @@
-<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-
-              android:orientation="vertical">
-
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="uk.ucl.group21.currentviewapp.Q1ToQ10">
 
     <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="984dp"
+            android:layout_height="match_parent"
             android:scrollbars="vertical|horizontal"
-            android:fillViewport="true">
+            android:fillViewport="true" android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="true" android:layout_alignParentStart="true">
 
         <TableLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:id="@+id/table_layout">
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Empty"
+                        android:layout_column="1"
+                        android:layout_weight="1"
+                        android:textColor="#ffffff"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Provisional_Problem_Description"
+                        android:textStyle="bold"
+                        android:layout_column="2"
+                        android:layout_weight="2"
+                        android:textSize="24sp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/None"
+                        android:layout_column="3"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Mild"
+                        android:layout_column="4"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Moderate"
+                        android:layout_column="5"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Severe"
+                        android:layout_column="6"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/Not_Known"
+                        android:layout_column="7"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal"/>
+            </TableRow>
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <CheckBox
+                        android:text="CheckBox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/checkBox"/>
+                <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"/>
+            </TableRow>
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="1"
+                        android:id="@+id/textView1"
+                        android:layout_column="1"
+                        android:layout_weight="1"
+                        android:textAlignment="center" android:textSize="18sp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/anxious_away_from_caregivers"
+                        android:id="@+id/textView2"
+                        android:layout_column="2"
+                        android:layout_weight="2"
+                        android:textSize="18sp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton1.1"
+                        android:layout_column="3"
+                        android:textAlignment="center"
+                        android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton1.2"
+                        android:layout_column="4"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton1.3"
+                        android:layout_column="5"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton1.4"
+                        android:layout_column="6"
+                        android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton1.5"
+                        android:layout_column="7"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp" android:layout_gravity="center_horizontal"
+                        android:width="10dp"/>
+
+            </TableRow>
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="2"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:textAlignment="center" android:textSize="18sp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Anxious in social situations"
+                    android:layout_column="2"
+                    android:textSize="18sp"
+                    android:layout_weight="2"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton2.1"
+                        android:layout_column="3"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton2.2"
+                        android:layout_column="4"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton2.3"
+                        android:layout_column="5"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton2.4"
+                        android:layout_column="6"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/radioButton2.5"
+                        android:layout_column="7"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
+                        android:width="10dp"/>
+            </TableRow>
 
             <TableRow
                     android:layout_width="fill_parent"
@@ -27,53 +244,65 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Empty"
-                        android:layout_column="1" android:layout_weight="1"/>
+                        android:text="3"
+                        android:layout_column="1"
+                        android:layout_weight="1"
+                        android:textAlignment="center" android:textSize="18sp"/>
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Provisional_Problem_Description"
-                        android:textStyle="bold"
-                        android:layout_column="2" android:layout_weight="2"/>
-                <TextView
+                        android:text="Anxious generally"
+                        android:layout_column="2"
+                        android:textSize="18sp"
+                        android:layout_weight="2"/>
+
+                    <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/radioButton3.1"
+                            android:layout_column="3"
+                            android:layout_weight="1"
+                            android:layout_gravity="center_horizontal" android:width="10dp"/>
+
+                <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/None"
-                        android:layout_column="3" android:layout_weight="1" android:textAlignment="center"
-                        android:textSize="20dp"/>
-                <TextView
+                        android:id="@+id/radioButton3.2"
+                        android:layout_column="4"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+
+                <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Mild"
-                        android:layout_column="4" android:layout_weight="1" android:textAlignment="center"
-                        android:textSize="20dp"/>
-                <TextView
+                        android:id="@+id/radioButton3.3"
+                        android:layout_column="5"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+
+                <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Moderate"
-                        android:layout_column="5" android:layout_weight="1" android:textAlignment="center"
-                        android:textSize="20dp"/>
-                <TextView
+                        android:id="@+id/radioButton3.4"
+                        android:layout_column="6"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+
+                <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Severe"
-                        android:layout_column="6" android:layout_weight="1" android:textAlignment="center"
-                        android:textSize="20dp"/>
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/Not_Known"
-                        android:layout_column="7" android:layout_weight="1" android:textAlignment="center"
-                        android:textSize="20dp"/>
+                        android:id="@+id/radioButton3.5"
+                        android:layout_column="7"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
+                        android:width="10dp"/>
+
 
             </TableRow>
+
+
         </TableLayout>
     </ScrollView>
-</LinearLayout>
+</RelativeLayout>
 
