--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -17,7 +17,7 @@
     <include
             layout="@layout/activity_dashboard_screen"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
 
 
     <android.support.design.widget.NavigationView
