--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -11,38 +11,6 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.Dashboard">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Login Complete"
-            android:id="@+id/systemMessage"
-            android:layout_below="@+id/textView"
-            android:layout_centerHorizontal="true"/>
-    <Button
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:text="@string/Previous_Questionnaires"
-            android:id="@+id/previousQuestionnairesButton"
-            android:onClick="btnPrevQuestion"
-            android:layout_marginTop="92dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="false"/>
-    <Button
-            android:layout_width="300dp"
-            android:text="@string/New_Questionnaire"
-            android:id="@+id/NewQuestionnaireButton"
-            android:onClick="btnNewQuestion"
-            android:layout_marginTop="92dp"
-            android:layout_alignParentStart="true" android:layout_height="200dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Username:"
-            android:id="@+id/textView"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"/>
     <Button
             android:layout_height="80dp"
             android:text="@string/help"
@@ -58,5 +26,36 @@
             android:id="@+id/btnSetting"
             android:onClick="btnSetting"
             android:layout_alignTop="@+id/btnHelp" android:layout_alignStart="@+id/previousQuestionnairesButton"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Login Complete"
+            android:id="@+id/systemMessage"
+            android:layout_below="@+id/textView" android:layout_centerHorizontal="true"
+            android:layout_marginTop="88dp"/>
+    <Button
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:text="@string/Previous_Questionnaires"
+            android:id="@+id/previousQuestionnairesButton"
+            android:onClick="btnPrevQuestion"
+            android:layout_marginTop="113dp"
+            android:layout_below="@+id/systemMessage" android:layout_toEndOf="@+id/systemMessage"/>
+    <Button
+            android:layout_width="300dp"
+            android:text="@string/New_Questionnaire"
+            android:id="@+id/NewQuestionnaireButton"
+            android:onClick="btnNewQuestion"
+            android:layout_height="200dp"
+            android:layout_alignTop="@+id/previousQuestionnairesButton" android:layout_alignParentStart="true"
+            android:layout_marginStart="12dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/Username"
+            android:id="@+id/textView"
+            android:layout_marginTop="89dp" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
