--- a/app/src/main/res/layout/activity_questionnaire_menu.xml
+++ b/app/src/main/res/layout/activity_questionnaire_menu.xml
@@ -23,4 +23,35 @@
             android:text="Back"
             android:id="@+id/back"
             android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/next"/>
+
+    <TextView
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/buttonQM1OV"
+        android:layout_alignStart="@+id/buttonQM1OV"
+        android:layout_marginStart="104dp"
+        android:id="@+id/textView3" />
+
+    <Button
+        android:text="Start With OVERVIEW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="109dp"
+        android:id="@+id/btnQM1OV"
+        android:onClick="btnQM1OV"
+        android:textSize="36sp"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="START WITH SECTION BY SECTION"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="36sp"
+        android:id="@+id/btnQM2SBS"
+        android:onClick="btnQM2SBS"
+        android:layout_marginTop="78dp"
+        android:layout_below="@+id/btnQM1OV"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
