--- a/app/src/main/res/menu/menu_main_activities.xml
+++ b/app/src/main/res/menu/menu_main_activities.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="action_settings"
+        android:title="@String/action_settings"
         app:showAsAction="never" />
 </menu>
